# Portfolio

./: .gitignore  FRONTEND_GUIDE.md  INTERVIEW_PREP_GUIDE.md  PROJECT_WORKFLOWS.md  README.md  build.sh  render.yaml  requirements.txt  start.sh  vercel.json
api/: pyproject.toml  requirements.txt  wsgi.py
django-portfolio/: .env.example  db.sqlite3  manage.py  requirements.txt
django-portfolio/content/: README.md  achievements.json  certifications.json  education.json  projects.json  skills.json
django-portfolio/core/: asgi.py  settings.py  urls.py  wsgi.py
django-portfolio/portfolio_app/: admin.py  content_loader.py  forms.py  models.py  tests.py  urls.py  views.py
django-portfolio/portfolio_app/management/commands/: Untitled  populate_achievements.py  populate_certifications.py  populate_education.py  populate_projects_complete.py  populate_skills.py  validate_content.py
django-portfolio/portfolio_app/migrations/: 0001_initial.py  0002_project.py  0003_achievement_certification.py  0004_education.py  0005_alter_certification_certification_type.py  0006_alter_project_description.py  0007_alter_project_description.py  0008_normalize_project_technologies.py  0009_contactmessage_resume.py  0010_remove_database_backed_portfolio_content.py
django-portfolio/portfolio_app/templates/: about.html  achievements.html  base.html  certifications.html  comming.html  contact.html  education.html  index.html  project_detail.html  projects.html  skills.html
django-portfolio/portfolio_app/templatetags/: portfolio_extras.py
django-portfolio/static/css/: custom.css
