[project]
name = "portfolio-api"
version = "0.1.0"
description = "Django portfolio on Vercel"
requires-python = ">=3.11"
dependencies = [
  "Django==5.1.7",
  "gunicorn==21.2.0",
  "whitenoise==6.6.0",
  "psycopg2-binary==2.9.9",
  "dj-database-url==2.1.0",
  "python-dotenv==1.0.0",
  "Pillow==10.2.0",
  "django-cors-headers==4.3.1",
  "django-storages==1.14.2",
  "boto3==1.34.0",
]

